docs: add swagger comments for new handlers
- add html templates, handlers for change password functionality
- edit the add social account process, show cancel button when add social account
- add the gray background for selected subpage in sidebar of dashboard
